# Trial-junkies-

./: .env  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  credential_generation_agent.py  discord_bot.py  form_filler_scraper_agent.py  gemini_agent.py  main.py  profile_generation_agent.py  proxy_agent.py  pyproject.toml  rapid_api_manager.py  role_management.py  scrape_example.py  solana_pay.py  subscription_plans.py  subscription_verification.py  test_apis.py  trial_execution_agent.py  trial_request_agent.py  verification_agent.py
attached_assets/: Pasted--self-solana-pay-client-mock-client-instance-ResourceWarning-Enable-tracemalloc-to-get-the-objec-1740242487070.txt  Pasted-I-m-sorry-to-hear-you-re-still-encountering-module-import-issues-Let-s-explore-some-alternative-app-1740239841719.txt  Pasted-It-looks-like-the-main-issue-arises-during-the-test-process-payment-in-the-TestSolanaPay-class--1740243765952.txt  Pasted-RROR-test-get-balance-test-solana-pay-TestSolanaPay-test-get-balance--1740242098155.txt  Pasted-Temp-Mail-Temp-Mail-Temporary-Disposable-E-mail-fast-and-easy-API-is-a-service-that-allows-to-re-1739991469412.txt  Pasted-The-error-message-ModuleNotFoundError-No-module-named-solana-transaction-indicates-that-your-co-1740241875786.txt  Pasted-The-error-message-you-re-encountering-indicates-a-type-mismatch-when-assigning-the-recent-blockhash-1740243548483.txt  Pasted-Troubleshooting-Steps-Ensure-Proper-Blockhash-Conversion-When-you-retrieve-the-blockhash-from-the-S-1740243905268.txt  (+2 more)
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+13 files in other folders)
