[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncio>=3.4.3",
    "base58>=2.1.1",
    "discord-py>=2.5.0",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.0.1",
    "rapid-api-client>=0.6.0",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "solana>=0.36.5",
    "solders>=0.25.0",
    "web3>=7.8.0",
    "webdriver-manager>=4.0.2",
]
